--- a/k8s/pvc.yaml
+++ b/k8s/pvc.yaml
@@ -1,8 +1,26 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: monitor-data-pv
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/mnt/data"
+
+---
+
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: monitors-pvc
+  name: monitor-data-pvc
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
